--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "pdfkit": "~0.13.0",
+    "blob-stream": "~0.1.3"
   }
 }
